syntax = "proto3";

package position;

option go_package = "./gen/pts;ptsv1";

service PositionTracker {
    rpc GetNearbyPositions(NearbyRequest) returns (stream PositionResponse) {}
    rpc UpdatePosition(PositionRequest) returns (UpdateResponse) {}
}

message NearbyRequest {
    string client_id = 1;
    double latitude = 2;
    double longitude = 3;
    double radius = 4;
}

message PositionResponse {
    string client_id = 1;
    double latitude = 2;
    double longitude = 3;
}

message PositionRequest {
    string client_id = 1; 
    double latitude = 2;
    double longitude = 3;
}
  
message UpdateResponse {
    bool success = 1;
    string message = 2;
}